@@ -771,4 +771,4 @@ use a syntax that could be used to access those variables directly from Python.<
               <td> A key in a dictionary, at the indicated place in its keys().</td><! --  XXX __dict__.keys() - not used - should think about this
  --></tr></table></dd></dl></dd></dl></dd></dl></dd>
      <dd> )</dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:42:31 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
